# Sampling

./: .gitignore  CMakeLists.txt  Japan.tif  README.md  main.cpp  ppm.cpp  ppm.h  sampling.cpp  sampling.h
